--- a/app/views/pletools/index.html.erb
+++ b/app/views/pletools/index.html.erb
@@ -15,99 +15,98 @@
     </div>
     <!-- /.page-header-primary --> 
     <!-- =========== BEGIN CONTENT FOR THE PAGE =========================================================================== -->
-    <div id="masposts" class="transitions-enabled">
-        <div class="page-content" role="main">
-        <div class="jumbotron">
-            <h4 class="text-center">Here I intend to document all the tools that I utilize in my own Personal Learning Environment.</h4>
-        </div>
-        <div class="container">
-            <div class="filter">
-                <span class="filter-title">
-                    Choose Filter
-                </span>
-                <ul class="sort jsbutton">
-                    
-                    <%= link_to 'Latest', pletools_path, :class => 'jslink', :style => "display: inline-block" %>
-                    <br>
-                   
-                    <span class = "jsbutton">
-                        <% tag_cloud(@pletags, %w(pletagsort pletagsort pletagsort)) do |pletag, css_class| %>
-                    </span>
-                        <li class = "jslink">
-                            <%= link_to pletag.name, pletag_path(pletag.name), :class => css_class %>
-                        </li>
-                    <% end %>
-                </ul>
-            </div>
-            <div class="filter-clone"><!-- this is where the clone of the filter goes--></div>
-            
-            <!-- _________ MASONRY WITH ISOTOPE ___________ -->
-            
-            <div id="masonry-container" class="transitions-enabled infinite-scroll clearfix">
-                <ul class="row row-masonry filter-masonry">
-                <li class="grid-sizer"></li>
-                <!-- required for fluid masonry layout -->
-                <li class="gutter-sizer"></li>
-                <!-- required for fluid masonry layout --> 
+    
+    <div class="page-content" role="main">
+    <div class="jumbotron">
+        <h4 class="text-center">Here I intend to document all the tools that I utilize in my own Personal Learning Environment.</h4>
+    </div>
+    <div class="container">
+        <div class="filter">
+            <span class="filter-title">
+                Choose Filter
+            </span>
+            <ul class="sort jsbutton">
                 
-                <!-- NEW STUFF -->
-                <% @pletools.each do |pletool| %>
-                    <li class="post msnry-port-entry">
-                        <% if pletool.image.exists? %>
-                            <div class="click-slide click-top"> 
-                                <%= link_to image_tag pletool.image.url(:large) %>
-                                <div class = "text-center">
-                                    <%= link_to '<span class = "ti ti-eye"></span>'.html_safe, pletool %>
-                                </div>
-                            </div>
-                        <% end %>
-                        <div class="msnry-blog-entry-text">
-                            <h4 class"h5"><a href="#"><%= link_to pletool.title, pletool %></a></h4>
-                            <p><%= markdown truncate(pletool.description, :length => 150) %></p>
-                            <ul class="msnry-blog-entry-meta list-inline">
-                                <li>
-                                    <span class="ti ti-pencil-alt">
-                                    </span>
-                                    by Anthony Llewellyn
-                                </li>
-                                    <li>
-                                    <span class="ti ti-calendar">
-                                    </span>
-                                    <%= pletool.created_at.strftime('%A, %B %d') %>
-                                </li>
-                                 <li class="entry-tags hidden-xs">
-                                    <% pletool.pletags.any? %>
-                                        <% pletool.pletags.each do |tag| %>
-                                            <li><a href="#"> 
-                                                <%= link_to tag.name, pletag_path(tag.name) %>
-                                            </a></li>  
-                                    <% end %>
-                                </li>
-                            </ul>
-                        </div>        
-                    </li>
-                <% end %>  
-                </li>
-            </ul>
-            </div>
-            <!--/ .row-masonry -->
-            
-            <div class="text-center">
-                <span class="new-pagination-toggle">
-                    Pagination
+                <%= link_to 'All', pletools_path, :class => 'jslink', :style => "display: inline-block" %>
+                <br>
+               
+                <span class = "jsbutton">
+                    <% tag_cloud(@pletags, %w(pletagsort)) do |pletag, css_class| %>
                 </span>
-                <!-- <ul class="new-pagination pagination pagination-lg clearfix"> -->
-                    <%= page_entries_info @pletools %>
-                    <br>
-                    <%= will_paginate @pletools, renderer: BootstrapPagination::Rails, :class => 'new-pagination pagination pagination-lg clearfix' %>
-                    
-                <!-- </ul> -->
-            </div>
-            <!-- /.text-center holding .pagination which shows at 992px and higher and is toggled otherwise --> 
-            <% if user_signed_in? %>
-                <%= link_to "New Tool", new_pletool_path(@pletool), class: "btn btn-primary" %>
-            <% end %>
+                    <li class = "jslink">
+                        <%= link_to pletag.name, pletag_path(pletag.name), :class => 'css_class' %>
+                    </li>
+                <% end %>
+            </ul>
         </div>
+        <div class="filter-clone"><!-- this is where the clone of the filter goes--></div>
+        
+        <!-- _________ MASONRY WITH ISOTOPE ___________ -->
+        
+        <div id="masonry-container" class="transitions-enabled infinite-scroll clearfix">
+            <ul class="row row-masonry filter-masonry">
+            <li class="grid-sizer"></li>
+            <!-- required for fluid masonry layout -->
+            <li class="gutter-sizer"></li>
+            <!-- required for fluid masonry layout --> 
+            
+            <!-- NEW STUFF -->
+            <% @pletools.each do |pletool| %>
+                <li class="post msnry-port-entry">
+                    <% if pletool.image.exists? %>
+                        <div class="click-slide click-top"> 
+                            <%= link_to image_tag pletool.image.url(:large) %>
+                            <div class = "text-center">
+                                <%= link_to '<span class = "ti ti-eye"></span>'.html_safe, pletool %>
+                            </div>
+                        </div>
+                    <% end %>
+                    <div class="msnry-blog-entry-text">
+                        <h4 class"h5"><a href="#"><%= link_to pletool.title, pletool %></a></h4>
+                        <p><%= markdown truncate(pletool.description, :length => 150) %></p>
+                        <ul class="msnry-blog-entry-meta list-inline">
+                            <li>
+                                <span class="ti ti-pencil-alt">
+                                </span>
+                                by Anthony Llewellyn
+                            </li>
+                                <li>
+                                <span class="ti ti-calendar">
+                                </span>
+                                <%= pletool.created_at.strftime('%A, %B %d') %>
+                            </li>
+                             <li class="entry-tags hidden-xs">
+                                <% pletool.pletags.any? %>
+                                    <% pletool.pletags.each do |tag| %>
+                                        <li><a href="#"> 
+                                            <%= link_to tag.name, pletag_path(tag.name) %>
+                                        </a></li>  
+                                <% end %>
+                            </li>
+                        </ul>
+                    </div>        
+                </li>
+            <% end %>  
+            </li>
+        </ul>
+        </div>
+        <!--/ .row-masonry -->
+        
+        <div class="text-center">
+            <span class="new-pagination-toggle">
+                Pagination
+            </span>
+            <!-- <ul class="new-pagination pagination pagination-lg clearfix"> -->
+                <%= page_entries_info @pletools %>
+                <br>
+                <%= will_paginate @pletools, renderer: BootstrapPagination::Rails, :class => 'new-pagination pagination pagination-lg clearfix' %>
+                
+            <!-- </ul> -->
+        </div>
+        <!-- /.text-center holding .pagination which shows at 992px and higher and is toggled otherwise --> 
+        <% if user_signed_in? %>
+            <%= link_to "New Tool", new_pletool_path(@pletool), class: "btn btn-primary" %>
+        <% end %>
 
         <!--/ .container--> 
     </div>
