--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
 <noscript>
 <div>Turn on your JavaScript!</div>
 </noscript>
-
+<%= render 'layouts/google_analytics' %>
 <%= render 'layouts/header' %>
 <%= render 'layouts/slideoutpanels' %>
 
